[tool.poetry]
name = "goc"
version = "0.5.2"
description = ""
authors = ["Todd Perry <toddperry171@gmail.com>"]
readme = "README.md"
repository = "https://github.com/djentleman/goc"
packages = [
    { include = "goc" }
]


[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
goc = 'goc.goc:goc'
